# micromamba-devcontainer-example

./: .dockerignore  .flake8  .git-blame-ignore-revs  .pre-commit-config.yaml  Dockerfile  README.md  conda-environment.yaml  conda-lock.yml  docker-compose.yaml  pyproject.toml  relock-deps  relock-deps.py  relock-deps.sh
.devcontainer/: .cruft.json  .gitignore  dev-conda-environment.yaml  dev-docker-compose.yaml  dev.Dockerfile  devcontainer.json  template.env
.devcontainer/cache/vscode-server-extensions/: .gitignore
.github/workflows/: run-cruft-update.yml
python/example_project/: __init__.py  main.py
