[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-project"
dynamic = ["version"]
description = "Demonstrate the micromamba devcontainer"
authors = [
    { name = "Ben Mares", email = "services-micromamba-devcontainer@tensorial.com" },
]
license = "MIT"
dependencies = [
    "cowsay >=5.0",
]
requires-python = ">=3.10,<3.11"

[tool.hatch.version]
path = "python/example_project/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "python/example_project",
]

[project.scripts]
example-hello-world = "example_project.main:hello"

[tool.ruff]
line-length = 88
select = [
    # Defaults:
    "E4",
    "E7",
    "E9",
    "F",
    # Custom:
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "RUF",  # Ruff-specific rules
    "TID",  # flake8-tidy-imports
    "BLE",  # flake8-blind-except
    "PTH",  # flake8-pathlib
    "A",  # flake8-builtins
]
ignore = [
    "C408",  # unnecessary-collection-call (allow dict(a=1, b=2); clarity over speed!)
    "D203",  # one-blank-line-before-class (must ignore this or D211)
    "D213",  # multi-line-summary-second-line (must ignore this or D212)
    "D415",  # ends-in-punctuation (redundant with D400 ends-in-period)
    # The following list is recommended to disable these when using ruff's formatter.
    # (Not all of the following are actually enabled.)
    "W191",  # tab-indentation
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    "D206",  # indent-with-spaces
    "D300",  # triple-single-quotes
    "Q000",  # bad-quotes-inline-string
    "Q001",  # bad-quotes-multiline-string
    "Q002",  # bad-quotes-docstring
    "Q003",  # avoidable-escaped-quote
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "ISC002",  # multi-line-implicit-string-concatenation
]
target-version = "py310"
show-fixes = true
show-source = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
